--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get: ^4.6.6
   http: ^1.2.2
   shimmer: ^3.0.0
+  in_app_purchase: ^3.2.3
+  in_app_purchase_storekit: ^0.4.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
